Restructure some sssq code